@@ -84,6 +84,9 @@ olecfinfo
 DEPLOYMENT
 * update manuals
 
+20150413
+* improved support file without directory entries
+
 20150328
 * added more bounds checks
 
